Step 1: Data Preparation Complete - Load JSE indices & CCI sentiment, merge monthly data
- Loaded all 9 JSE indices (2016-2025), excluded SWIX per boss direction
- Converted JSE weekly data to monthly returns
- Loaded Kasi CCI daily sentiment data, resampled to month-end
- Merged datasets using asof merge on nearest dates
- Final dataset: 119 months (Feb 2016 - Dec 2025) with 8 JSE indices + CCI
- Zero missing values, ready for signal generation and backtesting
- Exported to data/interim/backtest_data.csv and .xlsx

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Data
 data/raw/
+data/interim/
+*.csv
+*.xlsx
+*.xls
+*.parquet
+*.zip
 
 # Python
 __pycache__/
@@ -11,3 +17,4 @@ __pycache__/
 
 # macOS
 .DS_Store
+
